Update po files

--- a/po/bg.po
+++ b/po/bg.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:05+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: bulgarian <bg@li.org>\n"
@@ -1466,8 +1466,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"Грешка при преместване на качения файл, виж "
-"[a@./Documentation.html#faq1_11@Documentation]ЧЗВ 1.11[/a]"
+"Грешка при преместване на качения файл, виж [a@./Documentation."
+"html#faq1_11@Documentation]ЧЗВ 1.11[/a]"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -1647,9 +1647,9 @@ msgid ""
 "the administrator of the MySQL server."
 msgstr ""
 "phpMyAdmin направи опит да се свърже към MySQL сървъра, но сървъра отхвърли "
-"връзката. Трябва да проверите хоста, потребителското име и паролата в "
-"config.inc.php файла и да се уверите, че те отговарят на информацията "
-"предоставена от администратора на MySQL сървъра."
+"връзката. Трябва да проверите хоста, потребителското име и паролата в config."
+"inc.php файла и да се уверите, че те отговарят на информацията предоставена "
+"от администратора на MySQL сървъра."
 
 #: libraries/auth/cookie.auth.lib.php:230
 msgid "Log in"
@@ -6254,8 +6254,8 @@ msgid ""
 "installed the necessary PHP extensions as described in the %sdocumentation%s."
 msgstr ""
 "SQL валидаторът не може да бъде инициализиран. Моля проверете дали са "
-"инсталирани необходимите PHP разширения, както е описано в %sдокументацията%"
-"s."
+"инсталирани необходимите PHP разширения, както е описано в %sдокументацията"
+"%s."
 
 #: libraries/tbl_links.inc.php:106 libraries/tbl_links.inc.php:107
 msgid "Table seems to be empty!"
@@ -6277,10 +6277,10 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Ако типа на полето е \"enum\" или \"set\", моля въведете стойностите използвайки "
-"този формат: 'a','b','c'...<br />Ако е необходимо да сложите обратна черта "
-"(\"\\\") или апостроф (\"'\") между тези стойности, сложите обратна черта пред "
-"тях (например: '\\\\xyz' или 'a\\'b')."
+"Ако типа на полето е \"enum\" или \"set\", моля въведете стойностите "
+"използвайки този формат: 'a','b','c'...<br />Ако е необходимо да сложите "
+"обратна черта (\"\\\") или апостроф (\"'\") между тези стойности, сложите "
+"обратна черта пред тях (например: '\\\\xyz' или 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:105
 msgid ""
