--- a/po/cs.po
+++ b/po/cs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-23 12:02+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
@@ -115,8 +115,8 @@ msgid ""
 "The %s file is not available on this system, please visit www.phpmyadmin.net "
 "for more information."
 msgstr ""
-"Soubor %s nebyl nalezen, více informací naleznete na stránce "
-"www.phpmyadmin.net."
+"Soubor %s nebyl nalezen, více informací naleznete na stránce www.phpmyadmin."
+"net."
 
 #: db_create.php:58
 #, php-format
@@ -2325,8 +2325,8 @@ msgid ""
 "Secret passphrase used for encrypting cookies in [kbd]cookie[/kbd] "
 "authentication"
 msgstr ""
-"Tajné heslo používané pro šifrování cookies při přihlašování pomocí "
-"[kbd]cookie[/kbd]"
+"Tajné heslo používané pro šifrování cookies při přihlašování pomocí [kbd]"
+"cookie[/kbd]"
 
 #: libraries/config/messages.inc.php:25
 msgid "Blowfish secret"
@@ -3613,9 +3613,8 @@ msgid ""
 "Leave blank for no [a@http://wiki.phpmyadmin.net/pma/bookmark]bookmark[/a] "
 "support, suggested: [kbd]pma_bookmark[/kbd]"
 msgstr ""
-"Nechte prázdné pro vypnutí podpory "
-"[a@http://wiki.phpmyadmin.net/pma/bookmark]záložek[/a], doporučené "
-"nastavení: [kbd]pma_bookmarks[/kbd]"
+"Nechte prázdné pro vypnutí podpory [a@http://wiki.phpmyadmin.net/pma/"
+"bookmark]záložek[/a], doporučené nastavení: [kbd]pma_bookmarks[/kbd]"
 
 #: libraries/config/messages.inc.php:367
 msgid "Bookmark table"
@@ -5071,8 +5070,7 @@ msgid ""
 "TABLE or when creating indexes with CREATE INDEX or ALTER TABLE."
 msgstr ""
 "Paměť, která je alokována při řazení MyISAM klíčů během jejich vytváření "
-"příkazem CREATE INDEX nebo ALTER TABLE nebo opravování příkazem REPAIR "
-"TABLE."
+"příkazem CREATE INDEX nebo ALTER TABLE nebo opravování příkazem REPAIR TABLE."
 
 #: libraries/engines/pbms.lib.php:30
 msgid "Garbage Threshold"
@@ -8071,8 +8069,8 @@ msgid ""
 "SELECT col1 FROM foo, assuming that col1 is indexed."
 msgstr ""
 "Počet přečtení první položky klíčů. Příliš vysoká hodnota znamení, že server "
-"provádí mnoho kompletních procházení klíčů. Na příklad SELECT col1 FROM "
-"foo, pokud je col1 v klíči."
+"provádí mnoho kompletních procházení klíčů. Na příklad SELECT col1 FROM foo, "
+"pokud je col1 v klíči."
 
 #: server_status.php:59
 msgid ""
@@ -8120,8 +8118,7 @@ msgid ""
 "advantage of the indexes you have."
 msgstr ""
 "Počet požadavků na přečtení dalšího řádku ze souboru. Tato hodnota je vysoká "
-"pokud dotazy procházejí celé tabulky, pravděpodobně tedy nemají vhodné "
-"klíče."
+"pokud dotazy procházejí celé tabulky, pravděpodobně tedy nemají vhodné klíče."
 
 #: server_status.php:64
 msgid "The number of internal ROLLBACK statements."
