--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:04+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: danish <da@li.org>\n"
@@ -864,8 +864,8 @@ msgid ""
 msgstr ""
 "Der blev ikke modtaget nogen data til import. Enten blev der ikke indsendt "
 "et filnavn, eller filstørrelsen kan have overskredet maksimal størrelsen "
-"tilladt af din PHP-konfiguration. Se  "
-"[a@./Documentation.html#faq1_16@Documentation]FAQ 1.16[/a]."
+"tilladt af din PHP-konfiguration. Se  [a@./Documentation."
+"html#faq1_16@Documentation]FAQ 1.16[/a]."
 
 #: import.php:371 libraries/display_import.lib.php:23
 msgid "Could not load import plugins, please check your installation!"
@@ -1468,8 +1468,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"Fejl ved flytning af den uploadede fil, se "
-"[a@./Documentation.html#faq1_11@Documentation]FAQ 1.11[/a]"
+"Fejl ved flytning af den uploadede fil, se [a@./Documentation."
+"html#faq1_11@Documentation]FAQ 1.11[/a]"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -1652,8 +1652,8 @@ msgid ""
 msgstr ""
 "phpMyAdmin forsøgte at forbinde til MySQL-serveren, og serveren afviste "
 "forbindelsen. Du bør tjekke host, brugernavn og adgangskode i config.inc.php "
-"og sikre dig at de svarer til den information du har fået af "
-"administratoren af MySQL-serveren."
+"og sikre dig at de svarer til den information du har fået af administratoren "
+"af MySQL-serveren."
 
 #: libraries/auth/cookie.auth.lib.php:230
 msgid "Log in"
@@ -2174,8 +2174,8 @@ msgstr "Brugerdefineret - vis alle indstillinger til konfigurering"
 #: libraries/config.values.php:101
 msgid "Custom - like above, but without the quick/custom choice"
 msgstr ""
-"Brugerdefineret - som ovenfor, men uden indstillinger for "
-"hurtig/brugerdefineret"
+"Brugerdefineret - som ovenfor, men uden indstillinger for hurtig/"
+"brugerdefineret"
 
 #: libraries/config.values.php:119
 msgid "complete inserts"
@@ -2316,9 +2316,9 @@ msgid ""
 "cross-frame scripting attacks"
 msgstr ""
 "Aktivering indebærer, at en side, som ligger på et andet domæne, har adgang "
-"til at kalde phpMyAdmin fra en ramme. Det er en potentiel "
-"[strong]sikkerhedsrisiko[/strong], fordi det åbner op for cross-frame "
-"scripting angreb"
+"til at kalde phpMyAdmin fra en ramme. Det er en potentiel [strong]"
+"sikkerhedsrisiko[/strong], fordi det åbner op for cross-frame scripting "
+"angreb"
 
 #: libraries/config/messages.inc.php:22
 msgid "Allow third party framing"
@@ -2893,9 +2893,8 @@ msgid ""
 "html#cfg_TitleTable]documentation[/a] for magic strings that can be used to "
 "get special values."
 msgstr ""
-"Angiv browserens tekst i titelbaren. Se "
-"[a@Documentation.html#cfg_TitleTable]dokumentationen[/a] for tekststrenge "
-"der indeholder særlige værdier."
+"Angiv browserens tekst i titelbaren. Se [a@Documentation.html#cfg_TitleTable]"
+"dokumentationen[/a] for tekststrenge der indeholder særlige værdier."
 
 #: libraries/config/messages.inc.php:192
 #: libraries/navigation_header.inc.php:83
@@ -4457,8 +4456,8 @@ msgid ""
 "May be approximate. See [a@./Documentation.html#faq3_11@Documentation]FAQ "
 "3.11[/a]"
 msgstr ""
-"Kan være anslået. Se [a@./Documentation.html#faq3_11@Documentation] FAQ "
-"3.11[/a]"
+"Kan være anslået. Se [a@./Documentation.html#faq3_11@Documentation] FAQ 3.11"
+"[/a]"
 
 #: libraries/dbi/mysql.dbi.lib.php:111 libraries/dbi/mysqli.dbi.lib.php:122
 msgid "Connection for controluser as defined in your configuration failed."
@@ -9211,10 +9210,10 @@ msgid ""
 "protection may not be reliable if your IP belongs to an ISP where thousands "
 "of users, including you, are connected to."
 msgstr ""
-" Hvis du føler, at dette er nødvendigt, brug yderligere sikring -  %"
-"sværtsautentifikation%s indstillinger og %sbetroet proxy liste%s. IP-baseret "
-"beskyttelse er næppe pålidelig, hvis din IP-adresse hører til en udbyder "
-"med mange tusinde brugere."
+" Hvis du føler, at dette er nødvendigt, brug yderligere sikring -  "
+"%sværtsautentifikation%s indstillinger og %sbetroet proxy liste%s. IP-"
+"baseret beskyttelse er næppe pålidelig, hvis din IP-adresse hører til en "
+"udbyder med mange tusinde brugere."
 
 #: setup/lib/index.lib.php:268
 #, php-format
@@ -9228,8 +9227,8 @@ msgstr ""
 "Du har sat  [kbd]config[/kbd] autentifikation og inkluderet brugernavn og "
 "adgangskode for auto-login, hvilket er ikke en ønskværdig konfiguration for "
 "produktionssystemer. Enhver som kender eller gætter din phpMyAdmin URL kan "
-"direkte få adgang til dit phpMyAdmin panel for denne server. Sæt %"
-"sautentifikationstype%s til [kbd]cookie[/kbd] eller [kbd]http[/kbd]."
+"direkte få adgang til dit phpMyAdmin panel for denne server. Sæt "
+"%sautentifikationstype%s til [kbd]cookie[/kbd] eller [kbd]http[/kbd]."
 
 #: setup/lib/index.lib.php:270
 #, php-format
