--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:20+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: german <de@li.org>\n"
@@ -868,8 +868,8 @@ msgid ""
 msgstr ""
 "Es wurden keinen Daten zum importieren empfangen. Entweder wurde keine Datei "
 "ausgewählt, oder die Dateigröße hat die maximal erlaubte Größe der PHP "
-"Konfiguration überschritten. Siehe "
-"[a@./Documentation.html#faq1_16@Documentation]FAQ 1.16[/a]."
+"Konfiguration überschritten. Siehe [a@./Documentation."
+"html#faq1_16@Documentation]FAQ 1.16[/a]."
 
 #: import.php:371 libraries/display_import.lib.php:23
 msgid "Could not load import plugins, please check your installation!"
@@ -1475,8 +1475,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"Fehler beim Verschieben der hochgeladenen Datei, siehe "
-"[a@./Documentation.html#faq1_11@Documentation]FAQ 1.11[/a]"
+"Fehler beim Verschieben der hochgeladenen Datei, siehe [a@./Documentation."
+"html#faq1_11@Documentation]FAQ 1.11[/a]"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -2320,8 +2320,8 @@ msgid ""
 "cross-frame scripting attacks"
 msgstr ""
 "Wenn diese Option aktiviert ist, kann eine Webseite einer fremden Domäne "
-"phpMyAdmin in einem Frame aufrufen. Dies stellt eine potentielle "
-"[strong]Sicherheitslücke[/strong] für Cross-Frame Scripting Attacken dar"
+"phpMyAdmin in einem Frame aufrufen. Dies stellt eine potentielle [strong]"
+"Sicherheitslücke[/strong] für Cross-Frame Scripting Attacken dar"
 
 #: libraries/config/messages.inc.php:22
 msgid "Allow third party framing"
@@ -3408,8 +3408,8 @@ msgid ""
 "The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] "
 "([kbd]0[/kbd] for no limit)"
 msgstr ""
-"Anzahl der Bytes, welche ein Script zur Ausführung benötigen darf, z.B. "
-"[kbd]32M[/kbd] ([kbd]0[/kbd] für unbegrenzt)"
+"Anzahl der Bytes, welche ein Script zur Ausführung benötigen darf, z.B. [kbd]"
+"32M[/kbd] ([kbd]0[/kbd] für unbegrenzt)"
 
 #: libraries/config/messages.inc.php:314
 msgid "Memory limit"
@@ -3636,9 +3636,8 @@ msgid ""
 "Leave blank for no [a@http://wiki.phpmyadmin.net/pma/bookmark]bookmark[/a] "
 "support, suggested: [kbd]pma_bookmark[/kbd]"
 msgstr ""
-"Leer lassen für keine "
-"[a@http://wiki.phpmyadmin.net/pma/bookmark]Lesezeichen[/a] Unterstützung, "
-"Vorschlag: [kbd]pma_bookmark[/kbd]"
+"Leer lassen für keine [a@http://wiki.phpmyadmin.net/pma/bookmark]Lesezeichen"
+"[/a] Unterstützung, Vorschlag: [kbd]pma_bookmark[/kbd]"
 
 #: libraries/config/messages.inc.php:367
 msgid "Bookmark table"
@@ -3649,8 +3648,8 @@ msgid ""
 "Leave blank for no column comments/mime types, suggested: [kbd]"
 "pma_column_info[/kbd]"
 msgstr ""
-"Leer lassen für keine Spalten Kommentare/mime types, Vorschlag: "
-"[kbd]pma_column_info[/kbd]"
+"Leer lassen für keine Spalten Kommentare/mime types, Vorschlag: [kbd]"
+"pma_column_info[/kbd]"
 
 #: libraries/config/messages.inc.php:369
 msgid "Column information table"
@@ -3782,8 +3781,8 @@ msgstr ""
 "MySQL Wildcard-Symbole (% und _) sind möglich, mit \\ wird die urspüngliche "
 "Bedeutung wiederhergestellt, d.h. [kbd]'my\\_db'[/kbd] und nicht "
 "[kbd]'my_db'[/kbd]. Mit dieser Optionen können Datenbanklisten sortiert "
-"werden; geben Sie ihre Namen sortiert ein und nutzen Sie am Ende "
-"[kbd]*[/kbd], um die übrigen in alphabetischer Reihenfolge anzuzeigen."
+"werden; geben Sie ihre Namen sortiert ein und nutzen Sie am Ende [kbd]*[/"
+"kbd], um die übrigen in alphabetischer Reihenfolge anzuzeigen."
 
 #: libraries/config/messages.inc.php:395
 msgid "Show only listed databases"
@@ -3814,9 +3813,9 @@ msgid ""
 "phpmyadmin.net/pma/pmadb]pmadb[/a] for complete information. Leave blank for "
 "no support. Suggested: [kbd]phpmyadmin[/kbd]"
 msgstr ""
-"Datenbank für Relationen, Bookmarks, and PDF Features. Siehe "
-"[a@http://wiki.phpmyadmin.net/pma/pmadb]pmadb[/a] für komplette Information. "
-"Leer lassen für keine Unterstützung. Vorschlag: [kbd]phpmyadmin[/kbd]"
+"Datenbank für Relationen, Bookmarks, and PDF Features. Siehe [a@http://wiki."
+"phpmyadmin.net/pma/pmadb]pmadb[/a] für komplette Information. Leer lassen "
+"für keine Unterstützung. Vorschlag: [kbd]phpmyadmin[/kbd]"
 
 #: libraries/config/messages.inc.php:401
 msgid "Database name"
@@ -3855,8 +3854,8 @@ msgid ""
 "See [a@http://wiki.phpmyadmin.net/pma/auth_types#signon]authentication types"
 "[/a] for an example"
 msgstr ""
-"Siehe [a@http://wiki.phpmyadmin.net/pma/auth_types#signon]Authentifizierungs"
-"arten[/a] für ein Beispiel"
+"Siehe [a@http://wiki.phpmyadmin.net/pma/auth_types#signon]"
+"Authentifizierungsarten[/a] für ein Beispiel"
 
 #: libraries/config/messages.inc.php:409
 msgid "Signon session name"
@@ -4120,9 +4119,9 @@ msgid ""
 "alias, the table name itself stays unchanged"
 msgstr ""
 "Wird dies auf [kbd]nested[/kbd] gesetzt, so wird der Alias des "
-"Tabellennamens nur benutzt, um die Tabellen gemäß der "
-"$cfg['LeftFrameTableSeparator'] Direktive zu teilen bzw. zu verschachteln. "
-"Nur der Ordner erhält den Alias, der Tabellename bleibt unverändert"
+"Tabellennamens nur benutzt, um die Tabellen gemäß der $cfg"
+"['LeftFrameTableSeparator'] Direktive zu teilen bzw. zu verschachteln. Nur "
+"der Ordner erhält den Alias, der Tabellename bleibt unverändert"
 
 #: libraries/config/messages.inc.php:458
 msgid "Display table comment instead of its name"
@@ -4255,8 +4254,8 @@ msgid ""
 msgstr ""
 "Proxies als [kbd]IP: trusted HTTP header[/kbd] eingeben. Das folgende "
 "Beispiel legt fest, das phpMyAdmin einem HTTP_X_FORWARDED_FOR (X-Forwarded-"
-"For) Header, der von dem proxy 1.2.3.4:[br][kbd]1.2.3.4: "
-"HTTP_X_FORWARDED_FOR[/kbd] kommt, vertrauen soll"
+"For) Header, der von dem proxy 1.2.3.4:[br][kbd]1.2.3.4: HTTP_X_FORWARDED_FOR"
+"[/kbd] kommt, vertrauen soll"
 
 #: libraries/config/messages.inc.php:490
 msgid "List of trusted proxies for IP allow/deny"
@@ -4481,8 +4480,8 @@ msgid ""
 "May be approximate. See [a@./Documentation.html#faq3_11@Documentation]FAQ "
 "3.11[/a]"
 msgstr ""
-"Es kann sich hierbei um Näherungswerte handeln. Bitte lesen Sie auch "
-"[a@./Documentation.html#faq3_11@Documentation]FAQ 3.11[/a]"
+"Es kann sich hierbei um Näherungswerte handeln. Bitte lesen Sie auch [a@./"
+"Documentation.html#faq3_11@Documentation]FAQ 3.11[/a]"
 
 #: libraries/dbi/mysql.dbi.lib.php:111 libraries/dbi/mysqli.dbi.lib.php:122
 msgid "Connection for controluser as defined in your configuration failed."
@@ -5614,8 +5613,8 @@ msgid ""
 "tbl_name (col_A,col_B) VALUES (1,2,3), (4,5,6), (7,8,9)</code>"
 msgstr ""
 "beide obigen Optionen verwenden<br /> &nbsp; &nbsp; &nbsp; Beispiel: "
-"<code>INSERT INTO tbl_name (col_A,col_B) VALUES (1,2,3), (4,5,6), "
-"(7,8,9)</code>"
+"<code>INSERT INTO tbl_name (col_A,col_B) VALUES (1,2,3), (4,5,6), (7,8,9)</"
+"code>"
 
 #: libraries/export/sql.php:157
 msgid ""
@@ -6615,10 +6614,10 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Wenn das Feld vom Typ \"ENUM\" oder \"SET\" ist, benutzen Sie bitte das Format: "
-"'a','b','c'...<br />Wann immer Sie ein Backslash (\"\\\") oder ein einfaches "
-"Anführungszeichen (\"'\") verwenden, setzen Sie bitte ein Backslash vor das "
-"Zeichen. (z.B.: '\\\\xyz' oder 'a\\'b')."
+"Wenn das Feld vom Typ \"ENUM\" oder \"SET\" ist, benutzen Sie bitte das "
+"Format: 'a','b','c'...<br />Wann immer Sie ein Backslash (\"\\\") oder ein "
+"einfaches Anführungszeichen (\"'\") verwenden, setzen Sie bitte ein "
+"Backslash vor das Zeichen. (z.B.: '\\\\xyz' oder 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:105
 msgid ""
@@ -6656,8 +6655,8 @@ msgid ""
 msgstr ""
 "Bitte die Werte für die Umwandlungsoptionen in folgendem Format angeben: "
 "'a', 100, b,'c'...<br />Wann immer Sie ein Backslash (\"\\\") oder ein "
-"einfaches Anführungszeichen (\"'\") verwenden, setzen Sie bitte ein Backslash "
-"vor das Zeichen. (z.B.: '\\\\xyz' oder 'a\\'b')."
+"einfaches Anführungszeichen (\"'\") verwenden, setzen Sie bitte ein "
+"Backslash vor das Zeichen. (z.B.: '\\\\xyz' oder 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:371
 msgid "ENUM or SET data too long?"
@@ -6819,8 +6818,8 @@ msgid ""
 "third options are the width and the height in pixels."
 msgstr ""
 "Zeigt ein Bild und einen Link; die Spalte enthält den Dateinamen. Die erste "
-"Option ist ein URL-Präfix, wie \"http://www.example.com/\". Die zweite Option "
-"ist die Breite des Bildes und die dritte Option die Höhe in Pixeln."
+"Option ist ein URL-Präfix, wie \"http://www.example.com/\". Die zweite "
+"Option ist die Breite des Bildes und die dritte Option die Höhe in Pixeln."
 
 #: libraries/transformations/text_plain__link.inc.php:9
 msgid ""
@@ -8846,8 +8845,8 @@ msgstr ""
 #: server_status.php:488
 msgid "This MySQL server works as <b>master</b> in <b>replication</b> process."
 msgstr ""
-"Dieser MySQL Server arbeitet als <b>Master</b> im "
-"<b>Replikations</b>-Prozess."
+"Dieser MySQL Server arbeitet als <b>Master</b> im <b>Replikations</b>-"
+"Prozess."
 
 #: server_status.php:490
 msgid "This MySQL server works as <b>slave</b> in <b>replication</b> process."
