--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-26 19:06+0200\n"
 "Last-Translator: Dieter Adriaenssens <ruleant@users.sourceforge.net>\n"
 "Language-Team: dutch <nl@li.org>\n"
@@ -3781,10 +3781,10 @@ msgid ""
 "alphabetical order."
 msgstr ""
 "U kunt gebruik maken van MySQL jokertekens (% en _), escape deze tekens "
-"indien u ze letterlijk wil gebruiken. Gebruik bijvoorbeeld "
-"[kbd]'mijn\\_db'[/kbd] en niet [kbd]'mijn_db'[/kbd]. Met deze optie kan u "
-"databank lijsten sorteren door hun naam op volgorde in te voeren en met "
-"[kbd]*[/kbd] te eindigen om de rest op alfabetische volgorde te tonen."
+"indien u ze letterlijk wil gebruiken. Gebruik bijvoorbeeld [kbd]'mijn\\_db'[/"
+"kbd] en niet [kbd]'mijn_db'[/kbd]. Met deze optie kan u databank lijsten "
+"sorteren door hun naam op volgorde in te voeren en met [kbd]*[/kbd] te "
+"eindigen om de rest op alfabetische volgorde te tonen."
 
 #: libraries/config/messages.inc.php:395
 msgid "Show only listed databases"
@@ -3818,8 +3818,8 @@ msgid ""
 msgstr ""
 "Databank die wordt gebruikt om relaties, bookmarks en PDF eigenschappen op "
 "te slaan. Zie [a@http://wiki.phpmyadmin.net/pma/pmadb]pmadb[/a] voor meer "
-"informatie. Laat dit veld leeg om dit uit te schakelen, suggestie: "
-"[kbd]phpmyadmin[/kbd]"
+"informatie. Laat dit veld leeg om dit uit te schakelen, suggestie: [kbd]"
+"phpmyadmin[/kbd]"
 
 #: libraries/config/messages.inc.php:401
 msgid "Database name"
@@ -3985,9 +3985,6 @@ msgid "Automatically create versions"
 msgstr "Automatisch versies aanmaken"
 
 #: libraries/config/messages.inc.php:431
-#| msgid ""
-#| "Leave blank for no user preferences storage in database, suggested: [kbd]"
-#| "pma_config[/kbd]"
 msgid ""
 "Leave blank for no user preferences storage in database, suggested: [kbd]"
 "pma_userconfig[/kbd]"
@@ -5223,9 +5220,9 @@ msgid ""
 "A \":\" delimited list of metadata headers to be used to initialize the "
 "pbms_metadata_header table when a database is created."
 msgstr ""
-"Een metadata hoofdingenlijst met \":\" als lijstscheidingsteken, die gebruikt "
-"wordt om de pbms_metadata_header tabel te initiliaseren bij aanmaak van een "
-"databank."
+"Een metadata hoofdingenlijst met \":\" als lijstscheidingsteken, die "
+"gebruikt wordt om de pbms_metadata_header tabel te initiliaseren bij aanmaak "
+"van een databank."
 
 #: libraries/engines/pbms.lib.php:94
 #, php-format
@@ -7007,11 +7004,10 @@ msgid ""
 "validity configured in phpMyAdmin, because of this, your login will expire "
 "sooner than configured in phpMyAdmin."
 msgstr ""
-"De PHP parameter "
-"[a@http://php.net/manual/en/session.configuration.php#ini.session.gc-"
-"maxlifetime@]session.gc_maxlifetime[/a] is korter dan de ingestelde cookie "
-"geldigheid in phpMyAdmin. Hierdoor verloopt uw sessie eerder dan in "
-"phpMyAdmin is ingesteld."
+"De PHP parameter [a@http://php.net/manual/en/session.configuration.php#ini."
+"session.gc-maxlifetime@]session.gc_maxlifetime[/a] is korter dan de "
+"ingestelde cookie geldigheid in phpMyAdmin. Hierdoor verloopt uw sessie "
+"eerder dan in phpMyAdmin is ingesteld."
 
 #: main.php:276
 msgid ""
@@ -9236,10 +9232,10 @@ msgid ""
 msgstr ""
 "Deze %soptie%s zou uitgeschakeld moeten zijn gezien het de mogelijkheid "
 "geeft aan kwaadwillenden om op grote schaal aanmeldinspogingen uit te voeren "
-"op willekeurige MySQL-servers. Indien toch noodzakelijk gebruik dan %"
-"strusted proxies list%s. Echter, IP-adres gebaseerde beveiliging is mogelijk "
-"niet betrouwbaar wanneer uw IP-adres uit het netwerk van uw provider komt "
-"waar ook vele andere klanten gebruik van maken."
+"op willekeurige MySQL-servers. Indien toch noodzakelijk gebruik dan "
+"%strusted proxies list%s. Echter, IP-adres gebaseerde beveiliging is "
+"mogelijk niet betrouwbaar wanneer uw IP-adres uit het netwerk van uw "
+"provider komt waar ook vele andere klanten gebruik van maken."
 
 #: setup/lib/index.lib.php:252
 msgid ""
@@ -9340,8 +9336,8 @@ msgstr ""
 "U gebruikt het [kbd]config[/kbd] authenticatie type en heeft de te gebruiken "
 "gebruikersnaam en wachtwoord hierbij opgegeven voor automatisch aanmelden. "
 "Dit is niet aanbevolen voor productie systemen gezien iemand die het URL van "
-"phpMyAdmin achterhaald direct toegang heeft. Gebruik het %sauthenticatie "
-"type%s [kbd]cookie[/kbd] of [kbd]http[/kbd]."
+"phpMyAdmin achterhaald direct toegang heeft. Gebruik het %sauthenticatie type"
+"%s [kbd]cookie[/kbd] of [kbd]http[/kbd]."
 
 #: setup/lib/index.lib.php:270
 #, php-format
