--- a/po/ro.po
+++ b/po/ro.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:19+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: romanian <ro@li.org>\n"
@@ -1515,8 +1515,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"Eroare la mutarea fișierului încărcat, vezi "
-"[a@./Documentation.html#faq1_11@Documentation]FAQ 1.11[/a]"
+"Eroare la mutarea fișierului încărcat, vezi [a@./Documentation."
+"html#faq1_11@Documentation]FAQ 1.11[/a]"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -3105,9 +3105,9 @@ msgid ""
 msgstr ""
 "Dacă doriţi să utilizaţi serviciul de Validare SQL, ar trebui să fiți "
 "conştienţi de faptul că [strong] toate declaraţiile SQL sunt stocate anonim "
-"cu scopuri statistice [/strong]. [br] [em] "
-"[a@http://sqlvalidator.mimer.com/] Mimer SQL Validator [/ a], Copyright 2002 "
-"Upright Database Technology. Toate drepturile rezervate.[/em]"
+"cu scopuri statistice [/strong]. [br] [em] [a@http://sqlvalidator.mimer."
+"com/] Mimer SQL Validator [/ a], Copyright 2002 Upright Database Technology. "
+"Toate drepturile rezervate.[/em]"
 
 #: libraries/config/messages.inc.php:220
 #, fuzzy
