--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:05+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: slovak <sk@li.org>\n"
@@ -1474,8 +1474,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"Chyba pri presune nahrávaného súboru, viď "
-"[a@./Documentation.html#faq1_11@Documentation]FAQ 1.11[/a]"
+"Chyba pri presune nahrávaného súboru, viď [a@./Documentation."
+"html#faq1_11@Documentation]FAQ 1.11[/a]"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -3361,8 +3361,8 @@ msgid ""
 "shown."
 msgstr ""
 "Počet zobrazených riadkov pri prechádzaní sady výsledkov. Ak sada výsledkov "
-"obsahuje viac riadkov, zobrazia sa odkazy &quot;Predchádzajúci&quot; a "
-"&quot;Ďalší&quot;."
+"obsahuje viac riadkov, zobrazia sa odkazy &quot;Predchádzajúci&quot; a &quot;"
+"Ďalší&quot;."
 
 #: libraries/config/messages.inc.php:307
 msgid "Maximum number of rows to display"
@@ -3760,10 +3760,10 @@ msgid ""
 "alphabetical order."
 msgstr ""
 "Môžete použiť nahradzujúce znaky (% a _). Pokiaľ ich potrebujete použiť v "
-"ich pôvodnom význame, vložte spätné lomítko pred, napríklad "
-"[kbd]'moja\\_db'[/kbd] namiesto [kbd]'moja_db'[/kbd]. Použitím tejto voľby "
-"môžete ovplyvniť triedenie databáz v zozname. Stačí na konci zoznamu uviesť "
-"[kbd]*[/kbd] na konci pre zobrazenie ostatných v abecednom poradí."
+"ich pôvodnom význame, vložte spätné lomítko pred, napríklad [kbd]'moja"
+"\\_db'[/kbd] namiesto [kbd]'moja_db'[/kbd]. Použitím tejto voľby môžete "
+"ovplyvniť triedenie databáz v zozname. Stačí na konci zoznamu uviesť [kbd]*[/"
+"kbd] na konci pre zobrazenie ostatných v abecednom poradí."
 
 #: libraries/config/messages.inc.php:395
 msgid "Show only listed databases"
@@ -4453,8 +4453,8 @@ msgid ""
 "May be approximate. See [a@./Documentation.html#faq3_11@Documentation]FAQ "
 "3.11[/a]"
 msgstr ""
-"Môže byť nepresné. Viď [a@./Documentation.html#faq3_11@Documentation]FAQ "
-"3.11[/a]"
+"Môže byť nepresné. Viď [a@./Documentation.html#faq3_11@Documentation]FAQ 3.11"
+"[/a]"
 
 #: libraries/dbi/mysql.dbi.lib.php:111 libraries/dbi/mysqli.dbi.lib.php:122
 msgid "Connection for controluser as defined in your configuration failed."
@@ -7929,8 +7929,8 @@ msgid ""
 msgstr ""
 "Počet dočasných tabuliek automaticky vytvorených serverom pri vykonávaní "
 "príkazov. Ak je hodnota Created_tmp_disk_tables príliš vysoká, môžete zvýšiť "
-"hodnotu tmp_table_size  aby boli dočasné tabuľky ukladané do pamäte a nie "
-"na disk."
+"hodnotu tmp_table_size  aby boli dočasné tabuľky ukladané do pamäte a nie na "
+"disk."
 
 #: server_status.php:49
 msgid "How many temporary files mysqld has created."
