--- a/po/sv.po
+++ b/po/sv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-23 20:43+0200\n"
 "Last-Translator: ProUser <stefan@inkopsforum.se>\n"
 "Language-Team: swedish <sv@li.org>\n"
@@ -862,8 +862,7 @@ msgid ""
 msgstr ""
 "Inga data att importera mottogs. Antingen angavs inget filnamn eller så "
 "översteg filens storlek den maximalt tillåtna storleken i din PHP-"
-"konfiguration. Se [a@./Documentation.html#faq1_16@Documentation]FAQ "
-"1.16[/a]."
+"konfiguration. Se [a@./Documentation.html#faq1_16@Documentation]FAQ 1.16[/a]."
 
 #: import.php:371 libraries/display_import.lib.php:23
 msgid "Could not load import plugins, please check your installation!"
@@ -3945,9 +3944,6 @@ msgid "Automatically create versions"
 msgstr "Automatiskt skapa versioner"
 
 #: libraries/config/messages.inc.php:431
-#| msgid ""
-#| "Leave blank for no user preferences storage in database, suggested: [kbd]"
-#| "pma_config[/kbd]"
 msgid ""
 "Leave blank for no user preferences storage in database, suggested: [kbd]"
 "pma_userconfig[/kbd]"
@@ -6763,8 +6759,8 @@ msgid ""
 "Converts an (IPv4) Internet network address into a string in Internet "
 "standard dotted format."
 msgstr ""
-"Konverterar en (IPv4) Internetadress till en sträng i Internet-standard "
-"(DNS-format)."
+"Konverterar en (IPv4) Internetadress till en sträng i Internet-standard (DNS-"
+"format)."
 
 #: libraries/transformations/text_plain__sql.inc.php:9
 msgid "Formats text as SQL query with syntax highlighting."
@@ -8949,9 +8945,8 @@ msgid ""
 "documentation[/a]. Otherwise you will be only able to download or display it."
 msgstr ""
 "Skapa en skrivbar katalog för webbservern [em]config[/em] i phpMyAdmin:s "
-"huvudkatalog som beskrivs i "
-"[a@Documentation.html#setup_script]documentationen[/a]. Annars kommer du "
-"enbart kunna hämta eller visa den."
+"huvudkatalog som beskrivs i [a@Documentation.html#setup_script]"
+"documentationen[/a]. Annars kommer du enbart kunna hämta eller visa den."
 
 #: setup/frames/index.inc.php:57
 msgid ""
@@ -9184,8 +9179,8 @@ msgid ""
 "protection may not be reliable if your IP belongs to an ISP where thousands "
 "of users, including you, are connected to."
 msgstr ""
-"Om du känner att det är nödvändigt, använd extra skyddsinställningar - %"
-"shost autentisering%s inställningar  och %strusted proxies listan%s. Dock "
+"Om du känner att det är nödvändigt, använd extra skyddsinställningar - "
+"%shost autentisering%s inställningar  och %strusted proxies listan%s. Dock "
 "kan IP-baserat skydd inte vara tillförlitligt om din IP tillhör en ISP där "
 "tusentals användare, inklusive dig, är anslutna till."
 
