--- a/po/tr.po
+++ b/po/tr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-25 14:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
@@ -3766,8 +3766,8 @@ msgid ""
 "alphabetical order."
 msgstr ""
 "MySQL joker karakterleri (% ve _) kullanabilirsiniz, eğer bunların aslına "
-"uygun örneklerini kullanmak istiyorsanız bundan kaçının, yani "
-"[kbd]'my\\_db'[/kbd] kullanın ve [kbd]'my_db'[/kbd] kullanmayın. Bu seçeneği "
+"uygun örneklerini kullanmak istiyorsanız bundan kaçının, yani [kbd]'my"
+"\\_db'[/kbd] kullanın ve [kbd]'my_db'[/kbd] kullanmayın. Bu seçeneği "
 "kullanarak veritabanı listesini sıralayabilirsiniz, sadece adlarını sıralı "
 "girin ve geri kalanını alfabetik sırada göstermek için sonunda [kbd]*[/kbd] "
 "kullanın."
@@ -3945,8 +3945,8 @@ msgid ""
 "Leave blank for no SQL query tracking support, suggested: [kbd]pma_tracking[/"
 "kbd]"
 msgstr ""
-"SQL sorgu izleme desteği olmaması için boş bırakın, önerilen: "
-"[kbd]pma_tracking[/kbd]"
+"SQL sorgu izleme desteği olmaması için boş bırakın, önerilen: [kbd]"
+"pma_tracking[/kbd]"
 
 #: libraries/config/messages.inc.php:428
 msgid "SQL query tracking table"
@@ -6759,14 +6759,14 @@ msgid ""
 msgstr ""
 "SADECE LINUX: Harici bir uygulama çalıştırır ve sütun verisini standart "
 "girdi yoluyla besler. Uygulamanın standart çıktısı döner. Düzgün HTML kodu "
-"baskısı için varsayılan düzenlidir. Güvenlik nedeniyle "
-"libraries/transformations/text_plain__external.inc.php dosyasını elle "
-"düzenlemeli ve olmasını istediğiniz araçları listelemelisiniz. İlk seçenek "
-"kullanmak istediğiniz program sayısı ve ikinci seçenek program için "
-"parametrelerdir. Üçüncü seçenek, eğer 1'e ayarlanırsa, htmlspecialchars() "
-"işlevi kullanılarak çıktıyı dönüştürecektir (Varsayılan 1). Dördüncü "
-"seçenek, eğer 1'e ayarlanırsa, sözcük kaydırma korunacak ve tüm çıktı tek "
-"bir satırda görünecektir (Varsayılan 1)."
+"baskısı için varsayılan düzenlidir. Güvenlik nedeniyle libraries/"
+"transformations/text_plain__external.inc.php dosyasını elle düzenlemeli ve "
+"olmasını istediğiniz araçları listelemelisiniz. İlk seçenek kullanmak "
+"istediğiniz program sayısı ve ikinci seçenek program için parametrelerdir. "
+"Üçüncü seçenek, eğer 1'e ayarlanırsa, htmlspecialchars() işlevi kullanılarak "
+"çıktıyı dönüştürecektir (Varsayılan 1). Dördüncü seçenek, eğer 1'e "
+"ayarlanırsa, sözcük kaydırma korunacak ve tüm çıktı tek bir satırda "
+"görünecektir (Varsayılan 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:9
 msgid ""
@@ -7002,8 +7002,8 @@ msgid ""
 "extended features have been deactivated. To find out why click %shere%s."
 msgstr ""
 "phpMyAdmin yapılandırma depolaması tamamiyle yapılandırılmadı, bazı "
-"genişletilmiş özellikler etkisizleştirildi. Nedenini öğrenmek için %sburaya%"
-"s tıklayın."
+"genişletilmiş özellikler etkisizleştirildi. Nedenini öğrenmek için %sburaya"
+"%s tıklayın."
 
 #: main.php:316
 msgid ""
@@ -7172,9 +7172,9 @@ msgid ""
 "column, click the \"Choose column to display\" icon, then click on the "
 "appropriate column name."
 msgstr ""
-"Görüntü sütunu pembe ile gösterilir. Alanı, görüntü sütunu olarak "
-"ayarlamak/ayarı kaldırmak için \"Görüntülemek için sütun seçin\" simgesine "
-"tıklayın, sonrada uygun sütun adı üzerine tıklayın."
+"Görüntü sütunu pembe ile gösterilir. Alanı, görüntü sütunu olarak ayarlamak/"
+"ayarı kaldırmak için \"Görüntülemek için sütun seçin\" simgesine tıklayın, "
+"sonrada uygun sütun adı üzerine tıklayın."
 
 #: pmd_pdf.php:34
 msgid "Page has been created"
@@ -7290,8 +7290,8 @@ msgid ""
 "You can set more settings by modifying config.inc.php, eg. by using %sSetup "
 "script%s."
 msgstr ""
-"Config.inc.php dosyasını değiştirerek daha fazla ayar yapabilirsiniz, örn. %"
-"sKur programcığı%s kullanarak."
+"Config.inc.php dosyasını değiştirerek daha fazla ayar yapabilirsiniz, örn. "
+"%sKur programcığı%s kullanarak."
 
 #: prefs_manage.php:302
 msgid "Save to browser's storage"
@@ -8044,8 +8044,8 @@ msgid ""
 "statements from the transaction."
 msgstr ""
 "Geçici binari günlüğü önbelleğinde kullanılan ama binlog_cache_size değerini "
-"aşmış ve işlemdeki ifadeleri saklamak için geçici dosya kullanmış "
-"işlemlerin sayısıdır."
+"aşmış ve işlemdeki ifadeleri saklamak için geçici dosya kullanmış işlemlerin "
+"sayısıdır."
 
 #: server_status.php:47
 msgid "The number of transactions that used the temporary binary log cache."
