--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.11-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2012-03-14 14:14+0100\n"
+"POT-Creation-Date: 2012-03-29 10:03+0200\n"
 "PO-Revision-Date: 2012-03-28 16:00+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: chinese_traditional <zh_TW@li.org>\n"
@@ -838,7 +838,9 @@ msgstr "檔案無法讀取"
 msgid ""
 "You attempted to load file with unsupported compression (%s). Either support "
 "for it is not implemented or disabled by your configuration."
-msgstr "您試圖載入無法支援的壓縮檔 (%s). 可能是檔案格式尚未被支援或該檔案的支援功能在您的設定檔中被停用."
+msgstr ""
+"您試圖載入無法支援的壓縮檔 (%s). 可能是檔案格式尚未被支援或該檔案的支援功能在"
+"您的設定檔中被停用."
 
 #: import.php:336
 msgid ""
@@ -875,7 +877,8 @@ msgstr "匯入成功, 共 %d 個語法被執行."
 msgid ""
 "Script timeout passed, if you want to finish import, please resubmit same "
 "file and import will resume."
-msgstr "指令已逾時, 如果想完成匯入, 請重新送出相同檔案, 送出後匯入動作會繼續執行."
+msgstr ""
+"指令已逾時, 如果想完成匯入, 請重新送出相同檔案, 送出後匯入動作會繼續執行."
 
 #: import.php:425
 msgid ""
@@ -1439,7 +1442,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"移動上傳文件時發生錯誤，參見 [a@./Documentation.html#faq1_11@Documentation]FAQ 1.11[/a]。"
+"移動上傳文件時發生錯誤，參見 [a@./Documentation.html#faq1_11@Documentation]"
+"FAQ 1.11[/a]。"
 
 #: libraries/Index.class.php:427 tbl_relation.php:519
 msgid "No index defined!"
@@ -6710,7 +6714,8 @@ msgstr ""
 msgid ""
 "The phpMyAdmin configuration storage is not completely configured, some "
 "extended features have been deactivated. To find out why click %shere%s."
-msgstr "phpMyAdmin 高級功能未全部設定，部分功能不可用。要查出原因請%s點這裡%s。"
+msgstr ""
+"phpMyAdmin 高級功能未全部設定，部分功能不可用。要查出原因請%s點這裡%s。"
 
 #: main.php:316
 msgid ""
